# einops-game

./: LICENSE  Makefile  README.md  pyproject.toml
einops_game/: main.py
