[tool.poetry]
name = "einops-game"
version = "0.1.0"
description = ""
authors = ["Shayan Sadeghieh <shayan.sadeghieh@gmail.com>"]
readme = "README.md"
packages = [{include = "einops_game"}]

[tool.poetry.dependencies]
python = "^3.12"
einops = "^0.8.0"
torch = "^2.5.0"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
